syntax = "proto2";

package sonarqube.ws.projectlink;

option java_package = "org.sonarqube.ws";
option java_outer_classname = "ProjectLinks";
option optimize_for = SPEED;

// WS api/project_links/list
message SearchWsResponse {
  repeated Link links = 1;
}

message CreateWsResponse {
  optional Link link = 1;
}

message Link {
  optional string id = 1;
  optional string name = 2;
  optional string type = 3;
  optional string url = 4;
}